	(tinydebian-bts-mail-ctrl-command-add-macro): New.
	(tinydebian-bts-ctrl-list-ask): New.
	(tinydebian-bts-mail-ctrl-command-merge): New.
	(tinydebian-bts-mail-ctrl-command-forward): New.
	(tinydebian-bts-mail-ctrl-command-reassign): New.
	(tinydebian-bts-mail-ctrl-command-retitle): New.
	(tinydebian-bts-mail-ctrl-command-tags): New.
	(tinydebian-bts-mail-ctrl-command-usertag): New.

2008-10-31  Jari Aalto  <jari.aalto@cante.net>

	* tiny/tinydebian.el (tinydebian-bts-mail-ctrl-fixed): New.
	(tinydebian-bts-email-quiet): New.
	(tinydebian-bug-nbr-any-in-string): Check STRING.
	(tinydebian-bug-nbr-string): Check STR.
	(tinydebian-mail-header-matches): New.
	(tinydebian-mail-address-match-quiet-p): New.
	(tinydebian-bts-email-quiet-compose): New.
	(tinydebian-bts-email-quiet-remove): New.
	(tinydebian-mail-header-not-matches): New.
	(tinydebian-mail-header-set): New.
	(tinydebian-mail-mode-debian-address-quiet-control): New.
	(tinydebian-mail-address-match-p): New.
	(tinydebian-mail-address-match-control-p): New.
	(tinydebian-mail-mode-debian-address-add-cc): New.
	(tinydebian-mail-mode-debian-address-quiet-add): New.
	(tinydebian-mail-header-send-remove-item-regexp): New
	(tinydebian-mail-address-match-type-p): New.
	(tinydebian-mail-address-match-maintonly-p): New.
	(tinydebian-mail-address-match-submitter-p): New.
	(tinydebian-mail-mode-debian-address-control-add): New.
	(tinydebian-mail-mode-debian-address-control-remove): New.
	(tinydebian-mail-mode-debian-address-control-toggle): New.
	(tinydebian-mail-mode-debian-address-type-toggle): New.
	(tinydebian-install): Install
	`tinydebian-mail-mode-debian-default-keybindings'.
	(tinydebian-install-in-buffers): Run
	`tinydebian-mail-mode-debian-default-keybindings'.
	(tinydebian-:mail-mode-prefix-key): New.
	(tinydebian-:mail-mode-map): New.
	(tinydebian-:mail-mode-name): New.
	(tinydebian-:mail-mode-hook): New.
	(tinydebian-mail-mode-default-mode-bindings): New.
	(tinydebian-mail-mode-map-activate): New.